--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <span class="music"></span>
             <div class="music1">
-                <h2 id="title">SUGAR & BROWNIES</h2>
-                <h3 id="artist">Dharia</h3>
+                <h2 id="title">Shaitan</h2>
+                <h3 id="artist">Ajay Devgn</h3>
                 <div class="img">
                     <img src="images/shaitan.jpg" alt="">
                 </div>
