--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="Music.css">
     <title>Music Player</title>
@@ -20,7 +19,7 @@
                     <img src="images/shaitan.jpg" alt="">
                 </div>
                 <audio src="Music/shaitan.mp3" controls></audio>
-                
+
                 <div class="slider_container">
                     <input type="range" min="0" max="100" value="0" class="progress_slider" onchange="setProgress()">
                 </div>
@@ -30,7 +29,7 @@
                     <i class="fa-solid fa-play main-button" id="Play" title="Play"></i>
                     <i class="fa-solid fa-forward" id="Next" title="Next"></i>
                 </div>
-                
+
                 <div class="slider_container">
                     <i class="fa fa-volume-down"></i>
                     <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
